--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:design:23.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.google.code.gson:gson:2.2.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -30,5 +29,5 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.commit451:PhotoView:1.2.4'
-    compile project(':library')
+    compile project(':suitedrecyclerview')
 }
